story-editor: fixed cropper displaying

--- a/client/src/components/MainPage/StoryList/story-list/add-story-popup.scss
+++ b/client/src/components/MainPage/StoryList/story-list/add-story-popup.scss
@@ -151,6 +151,12 @@ $border-radius: 5px;
 		justify-content: center;
 		flex-direction: column;
 		align-items: center;
+		.cropper {
+			img {
+				height: 500px;
+				width: 280px;
+			}
+		}
 		.upload-image-button {
 			position: absolute;
 			top: -75px;
